<resources>
    <string name="app_name">WiseBites</string>
    <string name="onBoarding4_title">Discover the perfect recipes with the ingredients you already have!</string>
    <string name="signUpWithEmail">Sign up with email</string>
    <string name="orUse">or use</string>
    <string name="signUpWithGoogle">Sign up with Google</string>
    <string name="alreadyHaveAnAcc">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="skip">Skip</string>
    <string name="ellips">Ellips</string>
    <string name="wisebites_logo">Wisebites Logo</string>
    <string name="welcome_back_to_wisebites">Welcome back to Wisebites</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">WISEBITES</string>
    <string name="onboarding_description">Find food recipes with your ingredients and create your cooking list.</string>
    <string name="getStartedBtn">Getting Started</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Bookmark">Bookmark</string>
    <string name="Profile">Profile</string>
    <string name="ellipse">Ellipse</string>
    <string name="hello">Hello</string>
    <string name="let_s_create_your_account">Let\'s create your account</string>
    <string name="username">username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="there">There!</string>
    <string name="create_password">create password</string>
    <string name="confirm_password">confirm password</string>
    <string name="Let_s_reset_your_password">Let\'s reset your password</string>
    <string name="greetings">Hello,</string>
    <string name="Home_heading">What do you want to cook Today?</string>
    <string name="search_placeholder">Search recipes</string>
    <string name="choose_ingredients">Choose your\'s categories</string>
    <string name="select_ingredients">Select Categories</string>
    <string name="select_ingredients_subtext">Choose 1 category to discover new cooking ideas</string>
    <string name="choose_popular_recipe">Choose from popular recipe</string>
    <string name="sortBtn">Sort By</string>
    <string name="recipe_name">Lamb Tzatziki Burgers</string>
    <string name="recipe_tag">Beef</string>
    <string name="recipe_style">American</string>
    <string name="rb_recipe_atoz">Recipe: A to Z</string>
    <string name="rb_recipe_ztoa">Recipe: Z to A</string>
    <string name="rb_cat_atoz">Category: A to Z</string>
    <string name="rb_cat_ztoa">Category: Z to A</string>
    <string name="rb_area_atoz">Area: A to Z</string>
    <string name="rb_area_ztoa">Area: Z to A</string>
    <string name="seacrh_heading">Our Suggestion</string>
    <string name="bookmark_heading">Here are Your Bookmarks.</string>
    <string name="search_bookmark_placeholder">Search your bookmark</string>

    <string name="recipe_tab_details">Details</string>
    <string name="recipe_tab_ingredients">Ingredients</string>
    <string name="recipe_tab_direction">Direction</string>

    <string name="details_tab_content">Salad is a healthy and refreshing meal that is rich in
        vitamins, minerals, and fiber. It is also low in calories and fat, making it a great
        choice for a healthy diet.</string>
    <string name="ingredients_tab_content">
        • Beras 5kg\n
        • Air bersih\n
        • Ayam bagian paha\n
        • Bawang Goreng\n
        • Timun dan Tomat\n
        • Kecap Asin
    </string>
    <string name="direction_tab_content">
            1. Masukkan air bersih ke dalam panci dan masak air hingga mendidih.\n
            2. Siapkan beras yang sudah dicuci kemudian, campurkan ke dalam air mendidih tadi.\n
            3. Aduk secara berkala panci berisi air dan beras tadi sehingga menjadi bubur.\n
            4. Rebus ayam ke dalam panci berbeda sampai warnanya keputihan.\n
            5. Kemudian ayam disuwir kecil-kecil.\n
            6. Cuci topping lain seperti tomat, timun, dan sayuran lainnya.\n
            7. Sajikan bubur ke dalam sebuah piring bersih.\n
    </string>
    <string name="btn_logOut">Log Out</string>
    <string name="btn_editProfile">Edit Profile</string>
    <string name="edit_photoProfile">edit your profile picture</string>
    <string name="edit_password">edit your password</string>
    <string name="name_textInput">Name</string>
    <string name="email_textInput">Email</string>
    <string name="oldPassword_textInput">Old Password</string>
    <string name="profile_password">New Password</string>
    <string name="newPassword_textInput">New Password</string>
    <string name="confirmPassword_textInput">Confirm Password</string>
    <string name="btn_saveChanges">Save Changes</string>
    <string name="btn_cancelChanges">Cancel</string>
    <string name="btn_resetPassword">Reset</string>
    <string name="new_password">New Password</string>
    <string name="bento_illustration">Bento Illustration</string>
    <string name="profile_illustration">Profile Illustration</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="ellipse_lower">ellipse_lower</string>
    <string name="ellipse_upper">ellipse_upper</string>
    <string name="white_background">white_background</string>
    <string name="sort_drawer_decoration">sort_drawer_decoration</string>
</resources>