<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_ellips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ellips"
            android:src="@drawable/ellips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_wisebites_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wisebites_logo"
            android:src="@drawable/wisebites_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="200dp"/>

        <TextView
            android:id="@+id/tv_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_to_wisebites"
            style="@style/welcomeBack"
            app:layout_constraintTop_toBottomOf="@+id/iv_wisebites_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_sign_you_in"
            style="@style/signIn"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="75dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:background="@drawable/input_border"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="33dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/input_border"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            android:layout_marginTop="36dp" />

        <LinearLayout
            android:id="@+id/linear_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_dont_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                style="@style/signUp"
                android:layout_marginStart="4dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>