<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/lisa_photo_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/ic_nigga"
        android:layout_marginTop="79dp"/>

    <TextView
        android:id="@+id/edit_photo_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lisa_photo_profile"
        android:layout_marginTop="11dp"
        android:text="@string/edit_photoProfile"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true"/>

    <!--Edit Nama-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/edit_photo_profile"
        android:layout_marginTop="51dp"
        android:hint="@string/name_textInput"
        app:hintEnabled="true"
        app:hintTextColor="@color/gray"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:layout_marginTop="20dp"
        app:hintEnabled="true"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/gray"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/gray"
        android:hint="@string/email_textInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:inputType="none"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_password"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins_medium"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <!--Old Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            app:layout_constraintTop_toTopOf="parent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/oldPassword_textInput"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- New Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            app:layout_constraintTop_toBottomOf="@+id/oldPassword"
            android:layout_marginTop="24dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/newPassword_textInput"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            app:layout_constraintTop_toBottomOf="@+id/new_password"
            android:layout_marginTop="24dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/gray"
            android:hint="@string/confirmPassword_textInput"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:text="@string/btn_saveChanges"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textSize="12sp"
        android:padding="0dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelChanges"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:text="@string/btn_cancelChanges"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textSize="12sp"
        android:padding="0dp"
        android:textColor="@color/primary"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>